@@ -53,9 +53,6 @@
     <ClCompile Include="z80adr.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="z80ext.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="z80mch.c">
       <Filter>Source Files</Filter>
     </ClCompile>
