@@ -1,20 +1,26 @@
-/* z80.h
+/* z80.h */
 
-   Copyright (C) 1989-1995 Alan R. Baldwin
-   721 Berkeley St., Kent, Ohio 44240
-
-This program is free software; you can redistribute it and/or modify it
-under the terms of the GNU General Public License as published by the
-Free Software Foundation; either version 3, or (at your option) any
-later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>. */
+/*
+ *  Copyright (C) 1989-2009  Alan R. Baldwin
+ *
+ *  This program is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ *
+ * Alan R. Baldwin
+ * 721 Berkeley St.
+ * Kent, Ohio  44240
+ */
 
 /*
  * Extensions: P. Felber
@@ -27,11 +33,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 		Z80.H
 	}
 	$(FILES) = {
-		Z80EXT.C
 		Z80MCH.C
 		Z80ADR.C
 		Z80PST.C
 		ASMAIN.C
+		ASDBG.C
 		ASLEX.C
 		ASSYM.C
 		ASSUBR.C
@@ -143,13 +149,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 /*
  * HD64180 Instructions
  */
-#define	X_HD64	90
-#define	X_INH2	91
-#define	X_IN	92
-#define	X_OUT	93
-#define	X_MLT	94
-#define	X_TST	95
-#define	X_TSTIO	96
+#define	X_INH2	90
+#define	X_IN	91
+#define	X_OUT	92
+#define	X_MLT	93
+#define	X_TST	94
+#define	X_TSTIO	95
+#define	X_HD64	96
 
 struct adsym
 {
@@ -176,11 +182,12 @@ extern	int		admode(struct adsym *sp);
 extern	int		any(char c, char *str);
 extern	int		srch(char *str);
 
-
 	/* z80mch.c */
 extern	int		genop(int pop, int op, struct expr *esp, int f);
 extern	int		gixiy(int v);
+extern	VOID		machine(struct mne *mp);
 extern	int		mchpcr(struct expr *esp);
+extern	VOID		minit(void);
 
 #else
 
@@ -193,7 +200,8 @@ extern	int		srch();
 	/* z80mch.c */
 extern	int		genop();
 extern	int		gixiy();
+extern	VOID		machine();
 extern	int		mchpcr();
+extern	VOID		minit();
 
 #endif
-
